--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Free Template for building an SaaS application or admin dashboard using React + Material-UI"
+      content="Programa de campanha de fidelização de clientes"
     />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
     <title>
-      WaVer - Free React template for building an SaaS or admin application
+      FidelEasy
     </title>
   </head>
   <body>
